welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value j
	var p:Int = j.toInt
                    ^indexOfValue:7: error: type mismatch;
 found   : Unit
 required: Int
	for (j<-0 to nums.length -1){
              ^