welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var p:Int = j.toInt
	if (nums.length == 0){
		return -1
	}
	
	for (j<-0 to nums.length -1){
		if(nums(j)==value){
			return p
		}else{
			return -1
		}
	
	}
	

}
